[metadata]
name = chaind-eth
version = 0.1.0
description = Queue server for ethereum
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/chaintools/chainqueue
keywords =
	cic
	cryptocurrency
	ethereum
	solidarity
	mutual_credit
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
python_requires = >= 3.6
include_package_data = True
packages =
	chaind.eth 
	chaind.eth.runnable
	chaind.eth.cli
#	chainqueue.adapters

[options.entry_points]
console_scripts =
	chaind-eth-tasker = chaind_eth.runnable.tasker:main
	chaind-eth-syncer = chaind_eth.runnable.syncer:main
	chaind-eth-send = chaind_eth.runnable.send:main
	#chaind-eth-resend = chaind_eth.runnable.resend:main
